Fixed test suite errors